--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
